Radio buttons are using the wrong sizes and margins https://bugs.webkit.org/show_bug.cgi?id=131503

Reviewed by Jer Noble.

This is a regression that I caused recently when I combined radio button and
checkbox code.
* platform/mac/ThemeMac.mm:
(WebCore::paintToggleButton):



Canonical link: https://commits.webkit.org/149576@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167095 268f45cc-cd09-0410-ab3c-d52691b4dbfc